<resources>
    <string name="app_name">Tugas</string>
    <string name="PENDAFTARAN">PENDAFTARAN</string>
    <string name="Nama_Depan">Nama Depan</string>
    <string name="Nama_Belakang">Nama Belakang</string>
    <string name="Tempat_Lahir">Tempat Lahir</string>
    <string name="Tanggal_Lahir">Tanggal Lahir</string>
    <string name="Alamat">Alamat</string>
    <string name="Jenis_Kelamin">Jenis Kelamin</string>
    <string name="Lakilaki">Laki-Laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="Agama">Agama</string>
    <string name="Islam">Islam</string>
    <string name="Katolik">Katolik</string>
    <string name="Budha">Budha</string>
    <string name="Kepercayaan">Aliran Kepercayaan</string>
    <string name="Kristen">Kristen</string>
    <string name="Hindu">Hindu</string>
    <string name="Konghucu">Konghucu</string>
    <string name="Telepon">Telepon</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Masukkan_Password">Masukkan Password Kembali</string>
    <string name="btn_Kembali">KEMBALI</string>
    <string name="btn_Daftar">DAFTAR</string>
</resources>
